2015-04-27  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-default-ccl-lexical-analyzer): Fix wrong
	program is build on XEmacs.

	Cf. https://github.com/wanderlust/flim/commit/488a4d70fb4ae57bdd30dc75c2d75579894e28a2

	* std11.el (std11-default-ccl-lexical-analyzer): Likewise.

2015-03-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-default-ccl-lexical-analyzer): Fix the case
	input is terminated with space characters or non-closing comment.

2014-12-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* std11.el (std11-ignored-token-p): Simplified.

2014-12-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	CCL base lexical analyzers are available.  They are much faster.
	If you modify `std11-lexical-analyzer' or `mime-lexical-analyzer',
	you also need to modify `std11-ccl-lexical-analyzer' or
	`mime-ccl-lexical-analyzer', respectively.

	* mime-parse.el (mime-default-ccl-lexical-analyzer): New CCL program.
	(mime-ccl-lexical-analyzer): New customizable variable.
	(mime-lexical-analyze): Use CCL based lexical analyzer if
	mime-ccl-lexical-analyzer is non-nil.

	* std11.el (std11-default-ccl-lexical-analyzer): New CCL program.
	(std11-ccl-lexical-analyzer): New customizable variable.
	(std11-lexical-analyze): Use CCL based lexical analyzer if
	std11-ccl-lexical-analyzer is non-nil.

2014-11-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-en.texi (7bit): Fix typo.

	* mime-ja.texi: Fix missing cross-references.

2014-11-09  Erik Hetzner <egh@e6h.org>

	* flim-pkg.el: New file.

2014-11-09  Erik Hetzner <egh@e6h.org>

	* mime-en.texi: Fix headers and missing cross-references.

	* mime-ja.texi: Fix headers.

	* mime-en.sgml: Removed.

	* mime-ja.sgml: Removed.

2014-09-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-conf.el (mime-format-mailcap-command): Minor refactoring.

2014-09-13  Erik Hetzner <egh@e6h.org>

	* mime-conf.el (mime-format-mailcap-command): Add quotes for
	quoted file name to unquote.
	Cf. https://github.com/wanderlust/flim/pull/3
